objects/Resume__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resumes</relationshipLabel>
        <relationshipName>Resumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <formula>IF(ISBLANK(attachId__c),&apos;&apos;, HYPERLINK(&quot;https://c.na50.content.force.com/servlet/servlet.FileDownload?file=&quot;&amp; attachId__c , &quot;view Resume&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>attachId__c</fullName>
        <label>attachId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Resume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>